# flspam

./: .gitignore  README.md  main.py  old_config.py  old_fl_integration.py  old_rl_simple.py  personas.ipynb  pyproject.toml
data/: bypass_samples.json  ham_messages.json  relationships.json
src/: __init__.py  client_app.py  config_defaults.py  prepare_dataset.py  schemas.py  server_app.py  spam_dataset.ipynb  task.py
src/adversarial/: __init__.py  bypass.json  bypass_logger.py  config.py  fl_integration.py  prompts.py  rewards.py  rl_simple.py  sft.py  test_diversity.py  test_judge.py  train.py  train_twophase.py  trainer.py
src/model/: modernbert.py
src/model/Nouveau dossier/: README.md  adapter_config.json
src/synthetic_data/: __init__.py  config.py  generator.py  personas.py  quality_filter.py  sms_colab_generation.ipynb  sms_generation.py  text_utils.py
tests/: __init__.py  test_dataset.py  test_flower_config.py
