# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flspam"
version = "1.0.0"
description = "Federated Learning for SMS Spam Detection"
license = "Apache-2.0"
requires-python = ">=3.10"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.24.0",
    "torch>=2.7.1",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "ipykernel>=7.1.0",
    "datasets>=3.1.0",
    "distilabel>=1.5.3",
    "python-dotenv>=1.2.1",
    "mistralai>=1.9.11",
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
    "wandb>=0.16.0",
    "pytest>=8.0.0",
    "typer>=0.20.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
adversarial = [
    "unsloth",
    "trl>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "alexandre"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 15
fraction-train = 0.2  # Lower participation: ~2-4 clients per round out of 20
local-epochs = 2
lr = 1e-4  # Lower LR for LoRA fine-tuning
batch-size = 32  # Batch size for training (increase for GPU utilization)
spam-strategy = "iid"  # or "dirichlet" for non-IID
spam-alpha = 0.5  # Dirichlet alpha (lower = more non-IID)
save-every = 1  # Save checkpoint every N rounds (1 = every round)
use-class-weights = true  # Use inverse frequency class weights for imbalanced data

# Adversarial training config
adversarial-rounds = "8,15"  # FL rounds to run adversarial training (comma-separated)
adversarial-episodes = 4000  # Training episodes per adversarial round
adversarial-samples = 500  # Number of bypass samples to add to dataset
sft-epochs = 3  # Number of epochs for SFT training

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation - num-supernodes should match number of personas
# Run get_num_clients() to check: python -c "from src.task import get_num_clients; print(get_num_clients())"
[tool.flwr.federations.local-simulation]
options.num-supernodes = 20  # Update this to match your persona count
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25  # 4 clients can share GPU in parallel

# Ray runtime excludes (large model files that shouldn't be uploaded)
options.backend.init-args.runtime-env.excludes = [
    "sft_spam_lora",
    "rl_spam_lora", 
    "final_model",
    "checkpoints",
    "adversarial_outputs",
    "*.safetensors",
    "*.pt",
    "*.bin",
    ".venv",
    ".git",
]

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS

[dependency-groups]
dev = [
    "typer>=0.20.0",
]
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
